[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dune-sim-py"
version = "0.1.0"
description = "Typed Python client for the Dune Sim API (real-time multi-chain on-chain data)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Robert Ruben" }]
keywords = [
    "dune",
    "sim",
    "blockchain",
    "evm",
    "solana",
    "crypto",
    "web3",
    "api-client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/robertruben98/dune-sim-py"
Repository = "https://github.com/robertruben98/dune-sim-py"
Documentation = "https://docs.sim.dune.com"
Issues = "https://github.com/robertruben98/dune-sim-py/issues"
Changelog = "https://github.com/robertruben98/dune-sim-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/dune_sim"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "UP007", # Use X | Y for type annotations (need py3.9 compatibility)
    "UP045", # Use X | None for Optional (need py3.9 compatibility)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: live tests that require a real SIM_API_KEY (deselected by default)",
]
addopts = "-m 'not integration'"
